# roda

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/roda/: FilterIterator.hpp  RangeIterator.hpp  ReverseRangeIterator.hpp  algorithm.hpp  type_traits.hpp
include/roda/algorithm/: count.hpp  find.hpp  for_each.hpp
test/: main.cpp
